# rust-rtic-stm32

./: Cargo.toml  memory.x  readme.md
.cargo/: config.toml
protocols/nmea_protocol/: Cargo.toml
protocols/nmea_protocol/src/: lib.rs
protocols/rpi_json/: Cargo.toml
protocols/rpi_json/src/: lib.rs
protocols/wit_protocol/: Cargo.toml
protocols/wit_protocol/src/: lib.rs
src/: main.rs  nmea_protocol.rs  parser.rs  spi.rs  tmc2160.rs  wit_protocol.rs
tests/: nmea_parser_tests.rs  rpi_json_tests.rs  wit_parser_tests.rs
