[package]
name = "rpi_json"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpi_json"
test = false
bench = false

[lints.rust]
dead_code = "allow"

[lints.clippy]
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"

[dependencies]
# Logging
defmt = "0.3.5"
# JSON
serde = { version = "1.0.192", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0.108", default-features = false, features = [
    "alloc",
] }

nmea_protocol = { path = "../nmea_protocol" }
wit_protocol = { path = "../wit_protocol" }
