[package]
name = "wit_protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "wit_protocol"
test = false
bench = false

[lints.rust]
dead_code = "allow"

[lints.clippy]
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"

[dependencies]
# parser combinators library
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
defmt = "0.3.5"

# JSON
serde = { version = "1.0.192", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0.108", default-features = false, features = [
    "alloc",
] }
